--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=data_mahasiswa
+application.vendor=User
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,11 +33,15 @@ dist.jar=${dist.dir}/data_mahasiswa.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/data_mahasiswa
+endorsed.classpath=
 excludes=
+file.reference.json-20240303.jar=C:\\Users\\User\\OneDrive\\Documents\\NetBeansProjects\\Jar\\json-20240303.jar
+file.reference.unirest-java-4.0.0-RC2.jar=C:\\Users\\User\\OneDrive\\Documents\\NetBeansProjects\\Jar\\unirest-java-4.0.0-RC2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.unirest_json.classpath}
+    ${file.reference.unirest-java-4.0.0-RC2.jar}:\
+    ${file.reference.json-20240303.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
